2010-10-15  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [Soup] Should not ignore body for redirection responses
        https://bugs.webkit.org/show_bug.cgi?id=29299

        Tests that 302 redirections without Location do not ignore the
        body for redirection purpouses (the body could have a meta
        http-equiv=refresh)

        * http/tests/navigation/redirect302-metaredirect-expected.txt: Added.
        * http/tests/navigation/redirect302-metaredirect.html: Added.
        * http/tests/navigation/resources/redirect302-metaredirect.html: Added.
        * http/tests/navigation/resources/redirect302-metaredirect.pl: Added.
2010-10-15  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [Soup] Should not ignore body for redirection responses
        https://bugs.webkit.org/show_bug.cgi?id=29299

        Body is now provided to WebKitGtk+ in some redirections (like 302)
        because it could be used by servers to perform clunky redirections
        for example using http-equiv=REFRESH

        Test: http/tests/navigation/redirect302-metaredirect.html

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::gotHeadersCallback):
        (WebCore::finishedCallback):

Canonical link: https://commits.webkit.org/60439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69861 268f45cc-cd09-0410-ab3c-d52691b4dbfc