third_party/WebKit/LayoutTests/http/tests/navigation/resources/redirect302-metaredirect.pl
@@ -1,0 +1,21 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+#!/usr/bin/perl
+# Simple script to generate a 302 HTTP redirect with http-equiv=refresh
+
+print "Status: 302 Found\r\n";
+print "Content-type: text/html\r\n";
+print "\r\n";
+
+print <<HERE_DOC_END
+<html>
+<meta http-equiv="refresh" content="0;URL=redirect302-metaredirect.html">
+<script>
+    if (window.layoutTestController)
+        layoutTestController.waitUntilDone();
+</script>
+<body>
+Test failed! - This page uses a meta redirect to load another page.
+The key aspect is that the browser should get the body of the 302
+message and use it to perform a redirect
+</body></html>
+HERE_DOC_END
